Change cards alignment to top left

--- a/gpu.rc
+++ b/gpu.rc
@@ -16,16 +16,16 @@ conky.config = {
 	own_window_argb_value = 180,
 	own_window_colour = '#224466',
 	double_buffer = true,
-	minimum_width = 225,
+	minimum_width = 225, minimum_height = 125,
 	draw_shades = false,
 	draw_outline = false,
 	draw_borders = false,
 	draw_graph_borders = true,
 	default_color = '#101010',
 	default_shade_color = '#101010',
-	alignment = 'top_left',
-	gap_x = 800,
-	gap_y = 500,
+	alignment = 'top_right',
+	gap_x = 315,
+	gap_y = 380,
 	no_buffers = true,
 	cpu_avg_samples = 1,
 	uppercase = false,
